2006-01-27  Darin Adler  <darin@apple.com>

       - revised test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6731
         REGRESSION: change event fires at load time for checked items

        * fast/forms/radio-button-no-change-event.html: Updated to add a second radio button.
        * fast/forms/radio-button-no-change-event-expected.txt: Updated.

2006-01-26  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Tim Omernick.

        - test case for REGRESSION: crash when setting a list with list-style: none to display: none
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6860
        
        (This bug was fixed independently by Dave Harrison but I'm landing the test
        case anyway.)

        * fast/lists/list-style-none-crash-expected.checksum: Added.
        * fast/lists/list-style-none-crash-expected.png: Added.
        * fast/lists/list-style-none-crash-expected.txt: Added.
        * fast/lists/list-style-none-crash.html: Added.

2006-01-26  Beth Dakin  <bdakin@apple.com>

        Test case for <rdar://problem/4256504>
        khtml::RenderBlock::skipWhitespace crashes upon interaction with
        radio buttons

        * fast/inline/positionedLifetime-expected.checksum: Added.
        * fast/inline/positionedLifetime-expected.png: Added.
        * fast/inline/positionedLifetime-expected.txt: Added.
        * fast/inline/positionedLifetime.html: Added.

2006-01-26  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed and landed by Anders.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6841
          REGRESSION: WebKit (Thursday, January 26, 2006) crash in HTMLImageElementImpl::width()

        * fast/dom/HTMLImageElement/image-without-renderer-width-expected.txt: Added.
        * fast/dom/HTMLImageElement/image-without-renderer-width.html: Added.

2006-01-26  Anders Carlsson  <andersca@mac.com>
        
        Reviewed by Eric.
