@@ -1,0 +1,6 @@
+<html>
+<body onload="document.getElementById('inp').focus()">
+This test makes sure we don't crash when calling focus() on an element that has no renderer.
+<input id="inp" style="display:none"></input>
+</body>
+</html>
